--- a/app/src/main/res/layout/activity_play_screen.xml
+++ b/app/src/main/res/layout/activity_play_screen.xml
@@ -7,17 +7,18 @@
     android:background="#B67756"
     tools:context=".Play_Screen">
 
+
     <ImageView
         android:id="@+id/imgOutput"
         android:layout_width="218dp"
-        android:layout_height="224dp"
+        android:layout_height="298dp"
+        android:background="@drawable/image_dogwelcomepage"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.136"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:layout_constraintVertical_bias="0.08" />
 
     <Button
         android:id="@+id/btnFeed"
@@ -39,15 +40,15 @@
         android:background="#AF4524"
         android:backgroundTint="#AF4524"
         android:fontFamily="sans-serif-smallcaps"
-        android:text="Hunger"
+        android:text="Cleanliness"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.144"
+        app:layout_constraintHorizontal_bias="0.143"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.721" />
+        app:layout_constraintVertical_bias="0.792" />
 
     <TextView
         android:id="@+id/textView2"
@@ -56,15 +57,15 @@
         android:background="#AF4524"
         android:backgroundTint="#AF4524"
         android:fontFamily="sans-serif-smallcaps"
-        android:text="Cleanliness"
+        android:text="Hunger"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.165"
+        app:layout_constraintHorizontal_bias="0.127"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.792" />
+        app:layout_constraintVertical_bias="0.72" />
 
     <TextView
         android:id="@+id/textView2"
@@ -78,7 +79,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.161"
+        app:layout_constraintHorizontal_bias="0.142"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.861" />
@@ -107,5 +108,44 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.56" />
+
+    <ProgressBar
+        android:id="@+id/prgHunger"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="138dp"
+        android:layout_height="29dp"
+        android:progress="20"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.853"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.72" />
+
+    <ProgressBar
+        android:id="@+id/prgClean"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="138dp"
+        android:layout_height="29dp"
+        android:progress="10"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.853"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.792" />
+
+    <ProgressBar
+        android:id="@+id/prgHappiness"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="138dp"
+        android:layout_height="29dp"
+        android:progress="32"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.853"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.861" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
